[profile.release]
debug = true


[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
bucket_queue = "2.0.0"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.0"
dyn-clone = "1.0.16"
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
petgraph = "0.6.4"
